2006-02-28  Roger Leigh  <rleigh@debian.org>

	* Makefile.am: Add sbuild-chroot-source.(cc|h).

	* schroot/sbuild.h: Include sbuild-chroot-source.h.

	* schroot/sbuild-chroot-source.(cc|h): New file.  This is an
	interface class, to be implemented by chroots providing source
	chroots in addition to normal chroots.

2006-02-28  Roger Leigh  <rleigh@debian.org>

	* debian/changelog: Update.

	* debian/schroot.init: Rename $DAEMON to $SCHROOT.  Don't exit
	with an error if session recovery for an individual chroot fails.

2006-02-28  Roger Leigh  <rleigh@debian.org>

	* NEWS: Document changed behaviour of session operations.

	* schroot/schroot-options.cc (options): Allow session recovery,
	session running and session ending to be performed upon multiple
	chroots, rather than one at once.

2006-02-28  Roger Leigh  <rleigh@debian.org>

	* schroot/sbuild-chroot-config.cc (parse_data): Don't create a
	"-source" chroot for LVM snapshots if the chroot is active.

2006-02-28  Roger Leigh  <rleigh@debian.org>

	* NEWS: Document exec.d and run-exec-scripts changes.

2006-02-28  Roger Leigh  <rleigh@debian.org>

	* debian/changelog: Update.

	* debian/postinst: Move /etc/schroot/run.d/00check to
	/etc/schroot/exec.d/00check if modified locally.

	* debian/preinst: Remove /etc/schroot/run.d/00check if not
	modified locally.

	* Update tests.

	* schroot/schroot.conf: Rename run-session-scripts to
	run-exec-scripts.

	* schroot/schroot.conf.5.in: Document new configuration
	parameters, and deprecated parameters.

	* schroot/schroot.1.in: Document new setup script locations.

	* schroot/schroot-setup.5.in: Document new setup script locations
	and parameters.

	* schroot/Makefile.am (SUBDIRS): Rename run to exec.

	* configure.ac: Rename SCHROOT_CONF_RUN_D to SCHROOT_CONF_EXEC_D.
	Rename schroot/run/Makefile to schroot/exec/Makefile.  Tidy
	comments.

	* schroot/sbuild-session.cc: Use new chroot functions and enums.
	Also use SCHROOT_CONF_EXEC_D rather than SCHROOT_CONF_RUN_D.